--- a/src/CmakeLists.txt
+++ b/src/CmakeLists.txt
@@ -9,6 +9,15 @@ target_include_directories(${ProjectName} PRIVATE
 target_link_libraries(${ProjectName} 
     pico_stdlib 
     FreeRTOS-Kernel-Heap4 
+    hardware_pwm
     )
 
+
+target_compile_definitions(${ProjectName} PRIVATE
+        PICO_STDIO_STACK_BUFFER_SIZE=128 # use a small printf on stack buffer
+)
+
 pico_add_extra_outputs(${ProjectName})
+# enable usb output, disable uart output
+pico_enable_stdio_usb(${ProjectName} 1)
+pico_enable_stdio_uart(${ProjectName} 0)
