--- a/src/CmakeLists.txt
+++ b/src/CmakeLists.txt
@@ -2,6 +2,8 @@ add_executable(${ProjectName}
     main.c
 )
 
+pico_generate_pio_header(pico-robo-wheels ${CMAKE_CURRENT_LIST_DIR}/pico-robo-wheels.pio)
+
 target_include_directories(${ProjectName} PRIVATE
     ${CMAKE_CURRENT_LIST_DIR}
 )
@@ -10,6 +12,9 @@ target_link_libraries(${ProjectName}
     pico_stdlib 
     FreeRTOS-Kernel-Heap4 
     hardware_pwm
+    hardware_timer
+    hardware_flash
+    hardware_pio
     )
 
 
