add spinlocks to core 1 globals
Try spinlocks on global data that core 1 modifies to core 0..

 \\no spinlokcks added for data going from core 0 to core 1

--- a/src/CmakeLists.txt
+++ b/src/CmakeLists.txt
@@ -10,11 +10,16 @@ target_include_directories(${ProjectName} PRIVATE
 
 target_link_libraries(${ProjectName} 
     pico_stdlib 
+    pico_stdio
     FreeRTOS-Kernel-Heap4 
     hardware_pwm
     hardware_timer
     hardware_flash
     hardware_pio
+    hardware_sync
+    hardware_irq
+    pico_multicore
+
     )
 
 
