--- a/src/CmakeLists.txt
+++ b/src/CmakeLists.txt
@@ -1,5 +1,5 @@
 add_executable(${ProjectName}
-    main.c
+    main.c ssd1306.c
 )
 
 pico_generate_pio_header(pico-robo-wheels ${CMAKE_CURRENT_LIST_DIR}/pico-robo-wheels.pio)
@@ -18,6 +18,7 @@ target_link_libraries(${ProjectName}
     hardware_pio
     hardware_sync
     hardware_irq
+    hardware_i2c
     pico_multicore
 
     )
