freee rtos config

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,10 +12,10 @@ if (EXISTS ${picoVscode})
     include(${picoVscode})
 endif()
 # ====================================================================================
-cmake_minimum_required(VERSION 3.12)
-#set(PICO_BOARD pico2 CACHE STRING "Board type")
+cmake_minimum_required(VERSION 3.13)
 set(PICO_BOARD pico2 CACHE STRING "Board type")
-set(PICO_PLATFORM rp2350)
+#set(PICO_BOARD pico CACHE STRING "Board type")
+#set(PICO_PLATFORM rp2350)
 
 # Name project
 SET(ProjectName pico-robo-wheels)
@@ -25,8 +25,8 @@ SET(FREERTOS_KERNEL_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib/FreeRTOS-Kernel)
 
 # Import those libraries
 include(pico_sdk_import.cmake)
-include(${FREERTOS_KERNEL_PATH}/portable/ThirdParty/GCC/RP2040/FreeRTOS_Kernel_import.cmake)
-
+#include(${FREERTOS_KERNEL_PATH}/portable/ThirdParty/GCC/RP2040/FreeRTOS_Kernel_import.cmake)
+include(FreeRTOS_Kernel_import.cmake)
 # Define project
 project(${ProjectName})
 
@@ -35,6 +35,8 @@ pico_sdk_init()
 
 # Add subdirectories
 add_subdirectory(src)
+
+# create map/bin/hex file etc.
 
 # if you have anything in "lib" folder then uncomment below - remember to add a CMakeLists.txt
 # file to the "lib" directory
